--- a/source/index.html
+++ b/source/index.html
@@ -10,8 +10,136 @@
 </head>
 
 <body class="page__body">
-  <header class="header">Шапка</header>
-  <h1>Hello,world!</h1>
+  <header class="main-header">
+    <nav class="navigation">
+      <a class="navigation__logo" href="index.html">
+        <img class="navigation__logo-image" src="/" alt="Логотип сайта Cat-energy" width="70" height="59">
+        <img class="navigation__logo-image" src="/" alt="Логотип сайта Cat-energy" width="118" height="21">
+      </a>
+      <div class="navigation__wrapper">
+        <ul class="navigation__list">
+          <li class="navigation__item navigation__item--current"><a class="navigation__link" href="index.html">Главная</a></li>
+          <li class="navigation__item "><a class="navigation__link" href="catalog.html">Каталог продукции</a></li>
+          <li class="navigation__item "><a class="navigation__link" href="index.html">Подбор программы</a></li>
+        </ul>
+      </div>
+      <button class="navigation__menu-button" type="button">
+        <span class="visually-hidden">Открыть меню</span></button>
+    </nav>
+    <section class="promo">
+      <h1 class="promo__title">Функциональное <br> питание для котов</h1>
+      <p class="promo__description">Занялся собой? Займись котом!</p>
+      <picture>
+        <img class="promo__image" src="/" alt="Полезная еда" width="280" height="270">
+      </picture>
+      <a class="button" href="program.html">Подобрать программу</a>
+    </section>
+  </header>
+  <main class="main-container">
+    <section class="programs">
+      <h2 class="visually-hidden">Наши програмым.</h2>
+      <div class="programs__wrapper">
+        <article class="feature">
+          <h3 class="feature__title">Похудение</h3>
+          <p class="feature__description">Ваш кот весит больше собаки и почти утратил способность
+            лазить по деревьям? Пора на диету! Cat Energy Slim поможет
+            вашему питомцу сбросить лишний вес.</p>
+          <a class="feature__link" href="catalog-slim.html">Каталог Slim</a>
+        </article>
+        <article class="feature">
+          <h3 class="feature__title">набор массы</h3>
+          <p class="feature__description">Заработать авторитет среди дворовых котов и даже собак?
+            Серия Cat Energy Pro поможет вашему коту нарастить
+            необходимые мышцы!</p>
+          <a class="feature__link" href="catalog-pro.html">Каталог Pro</a>
+        </article>
+      </div>
+    </section>
+    <section class="about-product">
+      <h2 class="about-product__title">Как это работает</h2>
+      <ul class="about-product__list">
+        <li class="about-product__item about-product__item--leaf">Функциональное питание
+          содержит только полезные
+          питательные вещества.</li>
+        <li class="about-product__item about-product__item--water">Выпускается в виде порошка,
+          который нужно лишь залить
+          кипятком и готово.</li>
+        <li class="about-product__item about-product__item--cutlery">Замените один-два приема
+          обычной еды на наше
+          функциональное питание.</li>
+        <li class="about-product__item about-product__item--time">Уже через месяц наслаждайтесь
+          изменениями к лучшему
+          вашего питомца!</li>
+      </ul>
+    </section>
+    <section class="history">
+      <div class="history__wrapper">
+        <h2 class="history__title">Живой пример</h2>
+        <p class="history__intro">Борис сбросил 5 кг за 2 месяца, просто заменив свой
+          обычный корм на Cat Energy Slim. Отличный результат
+          без изнуряющих тренировок! При этом он не менял своих
+          привычек и по-прежнему спит по 16 часов в день.</p>
+        <dl class="history__list">
+          <div class="history__item">
+            <dt class="history__number">5 кг</dt>
+            <dd class="history__description">снижение<br>веса</dd>
+          </div>
+          <div class="history__item">
+            <dt class="history__number">60 дней</dt>
+            <dd class="history__description">затрачено<br>времени</dd>
+          </div>
+        </dl>
+        <p class="history__cost">Затраты на питание&#58; 15 000 руб.</p>
+        <div class="history__list-wrapper slider">
+          <ul class="history__list slider__list">
+            <li class="history__item slider__item">
+              <picture>
+                <img class="history__item-image" src="/" alt="Фотография упитанного кота" width="280" height="256">
+              </picture>
+            </li>
+            <li class="history__list slider__item">
+              <picture>
+                <img class="history__item-image" src="/" alt="Фотография худого кота" width="280" height="256">
+              </picture>
+            </li>
+          </ul>
+          <div class="history__bar">
+            <button class="history__button" type="button">
+              <span class="visually-hidden">Кнопка слайдера</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="contact">
+      <div class="contact__wrapper">
+        <h2 class="contact__title">приглашаем<br>к сотрудничеству<br> дилеров!</h2>
+        <address class="contact__address">ул.Большая<br>Конюшенная, д. 19/8,<br>Санкт-Петербрург</address>
+      </div>
+    </section>
+    <section class="map">
+      <h3 class="visually-hidden">Карта города Санкт-Петербург.</h3>
+      <picture>
+        <img class="map-image" src="/" alt="Карта города Санкт-Перебург." width="320" height="250">
+      </picture>
+    </section>
+  </main>
+  <footer class="main-footer">
+    <div class="main-footer__wrapper">
+      <a class="main-footer__logo" href="index.html">
+        <img class="main-footer__logo-image" src="#" alt="Логотип сайта." width="128" height="24">
+      </a>
+      <ul class="social">
+        <li class="social__item"><a class="social__link social__link--vkontakte" href="#"><span class="visually-hidden">Вконтакте</span></a></li>
+        <li class="social__item"><a class="social__link social__link--youtube" href="#"><span class="visually-hidden">Ютуб</span></a></li>
+        <li class="social__item"><a class="social__link social__link--telegram" href="#"><span class="visually-hidden">Телеграмм</span></a></li>
+      </ul>
+      <a class="main-footer__logo" href="https://htmlacademy.ru/intensive/adaptive">
+        <p class="main-footer__text">HTML Academy</p>
+        <img class="main-footer__logo-image" src="#" alt="Логотип сайта." width="27" height="34">
+      </a>
+    </div>
+  </footer>
 </body>
 
 </html>
