--- a/source/catalog.html
+++ b/source/catalog.html
@@ -228,7 +228,7 @@
     <section class="subscribe">
       <div class="subscribe__wrapper">
         <h2 class="subscribe__title">Акции и новинки</h2>
-        <p class="subscribe__description">ПОдпишитесь на наши новости и не пропустите ни одного предложения!</p>
+        <p class="subscribe__description">Подпишитесь на наши новости и не пропустите ни одного предложения!</p>
         <form action="https://echo.htmlacademy.ru/" method="post">
           <label>
             <input class="input" type="email" name="email" id="email-subscribe" placeholder="kuklachev@gmail.com" required>
