--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Название проекта</title>
+  <title>Cat Energy</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <!-- Подключение фавиконок -->
   <link rel="icon" href="favicon.ico"><!-- 32×32 -->
