Добавлена векторная графика (#7)

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -262,7 +262,12 @@
         <li class="social__item"><a class="social__link social__link--youtube" href="#"><span class="visually-hidden">Ютуб</span></a></li>
         <li class="social__item"><a class="social__link social__link--telegram" href="#"><span class="visually-hidden">Телеграмм</span></a></li>
       </ul>
-      <a class="main-footer__logo" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML Academy">HTML Academy</a>
+      <a class="main-footer__logo-copyright" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML Academy">
+        <p class="main-footer__text">HTML Academy</p>
+        <svg width="27" height="34">
+          <use href="icons/logo-htmlacademy.svg"></use>
+        </svg>
+      </a>
     </div>
   </footer>
 </body>
