--- a/source/catalog.html
+++ b/source/catalog.html
@@ -37,14 +37,14 @@
         <h1 class="catalog__title">Каталог продукции</h1>
         <div class="catalog__list">
           <article class="catalog__item">
-            <a class="catalog__item-link" href="product.html">
+            <a class="catalog__image-link" href="product.html">
               <picture>
                 <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/catalog-images/catalog-desktop/catalog-chicken500-desktop@1x.png 1x,images/catalog-images/catalog-desktop/catalog-chicken500-desktop@2x.png 2x">
                 <source width="200" height="210" type="image/png" media="(min-width:768px)" srcset="images/catalog-images/catalog-tablet/catalog-chicken500-tablet@1x.png 1x, images/catalog-images/catalog-tablet/catalog-chicken500-tablet@2x.png 2x">
                 <img class="catalog__item-image" src="images/catalog-images/catalog-mobile/catalog-chicken500-mobile@1x.png" srcset="images/catalog-images/catalog-mobile/catalog-chicken500-mobile@2x.png 2x" alt="Кошачья еда в банке." width="140" height="107">
               </picture>
             </a>
-            <a class="catalog__item-link" href="product.html">
+            <a class="catalog__title-link" href="product.html">
               <h3 class="catalog__item-title">Cat Energy PRO<br> 500 г</h3>
             </a>
             <dl class="catalog__info">
@@ -55,17 +55,17 @@
               <dt class="catalog__info-title">Цена</dt>
               <dd class="catalog__info-description">700 &#8381;</dd>
             </dl>
-            <a class="button button-primary" href="#">Заказать</a>
+            <a class="button button-primary catalog__button" href="#">Заказать</a>
           </article>
           <article class="catalog__item">
-            <a class="catalog__item-link" href="product.html">
+            <a class="catalog__image-link" href="product.html">
               <picture>
                 <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/catalog-images/catalog-desktop/catalog-chicken1000-desktop@1x.png 1x,images/catalog-images/catalog-desktop/catalog-chicken1000-desktop@2x.png 2x">
                 <source width="200" height="210" type="image/png" media="(min-width:768px)" srcset="images/catalog-images/catalog-tablet/catalog-chicken1000-tablet@1x.png 1x, images/catalog-images/catalog-tablet/catalog-chicken1000-tablet@2x.png 2x">
                 <img class="catalog__item-image" src="images/catalog-images/catalog-mobile/catalog-chicken1000-mobile@1x.png" srcset="images/catalog-images/catalog-mobile/catalog-chicken1000-mobile@2x.png 2x" alt="Кошачья еда в банке." width="140" height="107">
               </picture>
             </a>
-            <a class="catalog__item-link" href="product.html">
+            <a class="catalog__title-link" href="product.html">
               <h3 class="catalog__item-title">Cat Energy PRO<br> 1000 г</h3>
             </a>
             <dl class="catalog__info">
@@ -76,17 +76,17 @@
               <dt class="catalog__info-title">Цена</dt>
               <dd class="catalog__info-description">1000 &#8381;</dd>
             </dl>
-            <a class="button button-primary" href="#">Заказать</a>
+            <a class="button button-primary catalog__button" href="#">Заказать</a>
           </article>
           <article class="catalog__item">
-            <a class="catalog__item-link" href="product.html">
+            <a class="catalog__image-link" href="product.html">
               <picture>
                 <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/catalog-images/catalog-desktop/catalog-fish500-desktop@1x.png 1x, images/catalog-images/catalog-desktop/catalog-fish500-desktop@2x.png 2x">
                 <source width="200" height="210" type="image/png" media="(min-width:768px)" srcset="images/catalog-images/catalog-tablet/catalog-fish500-tablet@1x.png 1x, images/catalog-images/catalog-tablet/catalog-fish500-tablet@2x.png 2x">
                 <img class="catalog__item-image" src="images/catalog-images/catalog-mobile/catalog-fish500-mobile@1x.png" srcset="images/catalog-images/catalog-mobile/catalog-fish500-mobile@2x.png 2x" alt="Кошачья еда в банке." width="140" height="107">
               </picture>
             </a>
-            <a class="catalog__item-link" href="product.html">
+            <a class="catalog__title-link" href="product.html">
               <h3 class="catalog__item-title">Cat Energy PRO<br> 500 г</h3>
             </a>
             <dl class="catalog__info">
@@ -97,17 +97,17 @@
               <dt class="catalog__info-title">Цена</dt>
               <dd class="catalog__info-description">700 &#8381;</dd>
             </dl>
-            <a class="button button-primary" href="#">Заказать</a>
+            <a class="button button-primary catalog__button" href="#">Заказать</a>
           </article>
           <article class="catalog__item">
-            <a class="catalog__item-link" href="product.html">
+            <a class="catalog__image-link" href="product.html">
               <picture>
                 <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/catalog-images/catalog-desktop/catalog-fish1000-desktop@1x.png 1x, images/catalog-images/catalog-desktop/catalog-fish1000-desktop@2x.png 2x">
                 <source width="200" height="210" type="image/png" media="(min-width:768px)" srcset="images/catalog-images/catalog-tablet/catalog-fish1000-tablet@1x.png 1x, images/catalog-images/catalog-tablet/catalog-fish1000-tablet@2x.png 2x">
                 <img class="catalog__item-image" src="images/catalog-images/catalog-mobile/catalog-fish1000-mobile@1x.png" srcset="images/catalog-images/catalog-mobile/catalog-fish1000-mobile@2x.png 2x" alt="Кошачья еда в банке." width="140" height="107">
               </picture>
             </a>
-            <a class="catalog__item-link" href="product.html">
+            <a class="catalog__title-link" href="product.html">
               <h3 class="catalog__item-title">Cat Energy PRO<br> 1000 г</h3>
             </a>
             <dl class="catalog__info">
@@ -118,17 +118,17 @@
               <dt class="catalog__info-title">Цена</dt>
               <dd class="catalog__info-description">1000 &#8381;</dd>
             </dl>
-            <a class="button button-primary" href="#">Заказать</a>
+            <a class="button button-primary catalog__button" href="#">Заказать</a>
           </article>
           <article class="catalog__item">
-            <a class="catalog__item-link" href="product.html">
+            <a class="catalog__image-link" href="product.html">
               <picture>
                 <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/catalog-images/catalog-desktop/catalog-buckwheat500-desktop@1x.png 1x, images/catalog-images/catalog-desktop/catalog-buckwheat500-desktop@2x.png 2x">
                 <source width="200" height="210" type="image/png" media="(min-width:768px)" srcset="images/catalog-images/catalog-tablet/catalog-buckwheat500-tablet@1x.png 1x, images/catalog-images/catalog-tablet/catalog-buckwheat500-tablet@2x.png 2x">
                 <img class="catalog__item-image" src="images/catalog-images/catalog-mobile/catalog-buckwheat500-mobile@1x.png" srcset="images/catalog-images/catalog-mobile/catalog-buckwheat500-mobile@2x.png 2x" alt="Кошачья еда в банке." width="140" height="107">
               </picture>
             </a>
-            <a class="catalog__item-link" href="product.html">
+            <a class="catalog__title-link" href="product.html">
               <h3 class="catalog__item-title">Cat Energy SLIM<br> 500 г</h3>
             </a>
             <dl class="catalog__info">
@@ -139,17 +139,17 @@
               <dt class="catalog__info-title">Цена</dt>
               <dd class="catalog__info-description">400 &#8381;</dd>
             </dl>
-            <a class="button button-primary" href="#">Заказать</a>
+            <a class="button button-primary catalog__button" href="#">Заказать</a>
           </article>
           <article class="catalog__item">
-            <a class="catalog__item-link" href="product.html">
+            <a class="catalog__image-link" href="product.html">
               <picture>
                 <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/catalog-images/catalog-desktop/catalog-buckwheat1000-desktop@1x.png 1x, images/catalog-images/catalog-desktop/catalog-buckwheat1000-desktop@2x.png 2x">
                 <source width="200" height="210" type="image/png" media="(min-width:768px)" srcset="images/catalog-images/catalog-tablet/catalog-buckwheat1000-tablet@1x.png 1x, images/catalog-images/catalog-tablet/catalog-buckwheat1000-tablet@2x.png 2x">
                 <img class="catalog__item-image" src="images/catalog-images/catalog-mobile/catalog-buckwheat1000-mobile@1x.png" srcset="images/catalog-images/catalog-mobile/catalog-buckwheat1000-mobile@2x.png 2x" alt="Кошачья еда в банке." width="140" height="107">
               </picture>
             </a>
-            <a class="catalog__item-link" href="product.html">
+            <a class="catalog__title-link" href="product.html">
               <h3 class="catalog__item-title">Cat Energy SLIM<br> 1000 г</h3>
             </a>
             <dl class="catalog__info">
@@ -160,17 +160,17 @@
               <dt class="catalog__info-title">Цена</dt>
               <dd class="catalog__info-description">700 &#8381;</dd>
             </dl>
-            <a class="button button-primary" href="#">Заказать</a>
+            <a class="button button-primary catalog__button" href="#">Заказать</a>
           </article>
           <article class="catalog__item">
-            <a class="catalog__item-link" href="product.html">
+            <a class="catalog__image-link" href="product.html">
               <picture>
                 <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/catalog-images/catalog-desktop/catalog-rise500-desktop@1x.png 1x, images/catalog-images/catalog-desktop/catalog-rise500-desktop@2x.png 2x">
                 <source width="200" height="210" type="image/png" media="(min-width:768px)" srcset="images/catalog-images/catalog-tablet/catalog-rise500-tablet@1x.png 1x, images/catalog-images/catalog-tablet/catalog-rise500-tablet@2x.png 2x">
                 <img class="catalog__item-image" src="images/catalog-images/catalog-mobile/catalog-rice500-mobile@1x.png" srcset="images/catalog-images/catalog-mobile/catalog-rice500-mobile@2x.png 2x" alt="Кошачья еда в банке." width="140" height="107">
               </picture>
             </a>
-            <a class="catalog__item-link" href="product.html">
+            <a class="catalog__title-link" href="product.html">
               <h3 class="catalog__item-title">Cat Energy SLIM<br> 500 г</h3>
             </a>
             <dl class="catalog__info">
@@ -181,12 +181,12 @@
               <dt class="catalog__info-title">Цена</dt>
               <dd class="catalog__info-description">500 &#8381;</dd>
             </dl>
-            <a class="button button-primary" href="#">Заказать</a>
+            <a class="button button-primary catalog__button" href="#">Заказать</a>
           </article>
           <article class="catalog__info">
-            <h3 class="catalog__info-title">Показать еще 100500 товаров</h3>
-            <p class="catalog__info-description">На самом деле вкусов гораздо больше!</p>
-            <a class="button button-secondary" href="#">Показать всё</a>
+            <h3 class="catalog__item-show-more-title">Показать еще 100500 товаров</h3>
+            <p class="catalog__item-subtitle">На самом деле вкусов гораздо больше!</p>
+            <a class="button button-secondary " href="#">Показать всё</a>
           </article>
         </div>
       </div>
@@ -198,7 +198,7 @@
           <p class="additional-products__item-title">Сахарозаменитель</p>
           <p class="additional-products__item-description">1 упаковка &#40;100 г&#41</p>
           <p class="additional-products__item-rpice"><span>200</span> &#8381</p>
-          <a class="button button-primary" href="#">Заказать</a>
+          <a class="button button-primary " href="#">Заказать</a>
         </li>
         <li class="additional-products__item">
           <p class="additional-products__item-title">Питьевая вода</p>
