--- a/source/index.html
+++ b/source/index.html
@@ -23,7 +23,7 @@
           <source media="(min-width:768px)" srcset="images/logo-tablet.svg" width="60" height="50" type="image/svg+xml">
           <img class="navigation__logo-image" src="images/logo-mobile.svg" alt="Логотип сайта Cat-energy" width="33" height="38">
         </picture>
-        <img class="navigation__logo-image" src="images/logo-text.svg" alt="Логотип-слоган" width="101" height="18">
+        <img class="navigation__logo-text" src="images/logo-text.svg" alt="Логотип-слоган" width="101" height="18">
       </a>
       <div class="navigation__wrapper">
         <ul class="navigation__list">
@@ -51,15 +51,15 @@
   <main class="main-container">
     <section class="programs">
       <h2 class="visually-hidden">Наши програмым.</h2>
-      <div class="programs__wrapper">
-        <article class="feature">
+      <div class="feature__wrapper">
+        <article class="feature ">
           <h3 class="feature__title feature__title--slim-icon">Похудение</h3>
           <p class="feature__description">Ваш кот весит больше собаки и почти утратил способность
             лазить по деревьям? Пора на диету! Cat Energy Slim поможет
             вашему питомцу сбросить лишний вес.</p>
           <a class="feature__link" href="catalog-slim.html">Каталог Slim</a>
         </article>
-        <article class="feature">
+        <article class="feature ">
           <h3 class="feature__title feature__title--pro-icon">набор массы</h3>
           <p class="feature__description">Заработать авторитет среди дворовых котов и даже собак?
             Серия Cat Energy Pro поможет вашему коту нарастить
@@ -102,7 +102,7 @@
             <dd class="history__description">затрачено<br>времени</dd>
           </div>
         </dl>
-        <p class="history__cost">Затраты на питание&#58; 15 000 руб.</p>
+        <p class="history__cost">Затраты на питание&#58; <span>15 000 руб.</span></p>
         <div class=" slider">
           <ul class=" slider__list">
             <li class=" slider__item">
